--- a/src/components/PostItem/styles.module.css
+++ b/src/components/PostItem/styles.module.css
@@ -3,11 +3,13 @@
   margin: 0 auto;
   width: 100%;
 
-  border: 1px solid #ddd;
+  border: 1px solid var(--border-color);
   border-radius: 10px;
   margin-bottom: 20px;
   padding: 15px;
   position: relative;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 .post:last-of-type {
   margin-bottom: 0;
