--- a/src/components/PostsContainer/styles.module.css
+++ b/src/components/PostsContainer/styles.module.css
@@ -14,7 +14,7 @@
   border-radius: 7px 7px 0 0;
   background-color: var(--background-color);
   margin-bottom: 10px;
-  padding: 10px 0;
+  padding: 10px;
 }
 .filterContainer p {
   margin: 0;
